backend/src/main/java/com/example/grannfix/common/errors/ForbiddenException.java
package com.example.grannfix.common.errors;

public class ForbiddenException extends RuntimeException {
    public ForbiddenException(String message) { super(message); }
}